Backend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NULL

Grammar

Rule 0     S' -> initial
Rule 1     initial -> instructions
Rule 2     instruction -> error PTCOMA
Rule 3     instructions -> instructions instruction
Rule 4     instructions -> instruction
Rule 5     cuerpoFuncion -> cuerpoFuncion instruction
Rule 6     cuerpoFuncion -> instruction
Rule 7     instruction -> impresion
Rule 8     instruction -> asignacion
Rule 9     instruction -> funcion
Rule 10    instruction -> llamadaFunc
Rule 11    instruction -> ifs
Rule 12    instruction -> whiles
Rule 13    instruction -> fors
Rule 14    instruction -> traferencia
Rule 15    instruction -> nativaArayPtC
Rule 16    fors -> FOR ID IN expresiones DSPUNTOS expresiones cuerpoFuncion END PTCOMA
Rule 17    fors -> FOR ID IN expresiones cuerpoFuncion END PTCOMA
Rule 18    impresion -> PRINT PARENTESISABIERTO exp PARENTESISCERRADO PTCOMA
Rule 19    impresion -> PRINTLN PARENTESISABIERTO expresionescomma PARENTESISCERRADO PTCOMA
Rule 20    impresion -> PRINTLN PARENTESISABIERTO PARENTESISCERRADO PTCOMA
Rule 21    expresionescomma -> expresionescomma COMA expresiones
Rule 22    expresionescomma -> expresiones
Rule 23    entornoT -> LOCAL
Rule 24    entornoT -> GLOBAL
Rule 25    asignacion -> ID IGUAL expresiones DSPUNTOS DSPUNTOS tipos PTCOMA
Rule 26    asignacion -> ID IGUAL expresiones PTCOMA
Rule 27    asignacion -> entornoT ID IGUAL expresiones DSPUNTOS DSPUNTOS tipos PTCOMA
Rule 28    asignacion -> entornoT ID IGUAL expresiones PTCOMA
Rule 29    asignacion -> entornoT ID PTCOMA
Rule 30    asignacion -> ID listaAccessoAr IGUAL expresiones PTCOMA
Rule 31    listaAccessoAr -> listaAccessoAr accesoArreglos
Rule 32    listaAccessoAr -> accesoArreglos
Rule 33    accesoArreglos -> CORCHETEA exp CORCHETEC
Rule 34    listaParametros -> listaParametros COMA parametros
Rule 35    traferencia -> RETURN expresiones PTCOMA
Rule 36    traferencia -> BREAK PTCOMA
Rule 37    traferencia -> CONTINUE PTCOMA
Rule 38    nativaArayPtC -> nativasArray PTCOMA
Rule 39    nativasArray -> PUSH NOT PARENTESISABIERTO exp COMA exp PARENTESISCERRADO
Rule 40    nativasArray -> POP NOT PARENTESISABIERTO exp PARENTESISCERRADO
Rule 41    nativasArray -> LENGTH PARENTESISABIERTO exp PARENTESISCERRADO
Rule 42    listaParametros -> parametros
Rule 43    parametros -> ID DSPUNTOS DSPUNTOS tipos
Rule 44    parametros -> ID
Rule 45    funcion -> FUNCTION ID PARENTESISABIERTO listaParametros PARENTESISCERRADO cuerpoFuncion END PTCOMA
Rule 46    funcion -> FUNCTION ID PARENTESISABIERTO PARENTESISCERRADO cuerpoFuncion END PTCOMA
Rule 47    listaValores -> listaValores COMA expresiones
Rule 48    listaValores -> expresiones
Rule 49    llamadaFunc -> ID PARENTESISABIERTO listaValores PARENTESISCERRADO PTCOMA
Rule 50    llamadaFunc -> ID PARENTESISABIERTO PARENTESISCERRADO PTCOMA
Rule 51    ifs -> IF expresiones cuerpoFuncion elseifs ELSE cuerpoFuncion END PTCOMA
Rule 52    ifs -> IF expresiones cuerpoFuncion ELSE cuerpoFuncion END PTCOMA
Rule 53    ifs -> IF expresiones cuerpoFuncion elseifs END PTCOMA
Rule 54    ifs -> IF expresiones cuerpoFuncion END PTCOMA
Rule 55    elseifs -> elseifs conelseif
Rule 56    elseifs -> conelseif
Rule 57    conelseif -> ELSEIF expresiones cuerpoFuncion
Rule 58    whiles -> WHILE expresiones cuerpoFuncion END PTCOMA
Rule 59    tipos -> INT
Rule 60    tipos -> FLOAT
Rule 61    tipos -> STRING
Rule 62    tipos -> BOOL
Rule 63    tipos -> CHAR
Rule 64    expresiones -> exp
Rule 65    nativas -> LOG10 PARENTESISABIERTO exp PARENTESISCERRADO
Rule 66    nativas -> LOG PARENTESISABIERTO exp COMA exp PARENTESISCERRADO
Rule 67    nativas -> SIN PARENTESISABIERTO exp PARENTESISCERRADO
Rule 68    nativas -> COS PARENTESISABIERTO exp PARENTESISCERRADO
Rule 69    nativas -> TAN PARENTESISABIERTO exp PARENTESISCERRADO
Rule 70    nativas -> SQRT PARENTESISABIERTO exp PARENTESISCERRADO
Rule 71    nativas -> UPPERCASE PARENTESISABIERTO exp PARENTESISCERRADO
Rule 72    nativas -> LOWERCASE PARENTESISABIERTO exp PARENTESISCERRADO
Rule 73    nativas -> PARSE PARENTESISABIERTO tipos COMA exp PARENTESISCERRADO
Rule 74    nativas -> TRUNC PARENTESISABIERTO tipos COMA exp PARENTESISCERRADO
Rule 75    nativas -> FLOAT_ PARENTESISABIERTO exp PARENTESISCERRADO
Rule 76    nativas -> STRING_ PARENTESISABIERTO exp PARENTESISCERRADO
Rule 77    nativas -> TYPEOF PARENTESISABIERTO exp PARENTESISCERRADO
Rule 78    exp -> exp MAS exp
Rule 79    exp -> exp MENOS exp
Rule 80    exp -> exp MULTIPLICACION exp
Rule 81    exp -> exp DIVISION exp
Rule 82    exp -> exp POTENCIA exp
Rule 83    exp -> exp MODULO exp
Rule 84    exp -> exp MAYOR exp
Rule 85    exp -> exp MENOR exp
Rule 86    exp -> exp MAYORIGUAL exp
Rule 87    exp -> exp MENORIGUAL exp
Rule 88    exp -> exp IGUALIGUAL exp
Rule 89    exp -> exp DIFERENTE exp
Rule 90    exp -> exp AND exp
Rule 91    exp -> exp OR exp
Rule 92    exp -> NOT exp
Rule 93    exp -> MENOS exp
Rule 94    exp -> PARENTESISABIERTO exp PARENTESISCERRADO
Rule 95    exp -> ENTERO
Rule 96    exp -> DECIMAL
Rule 97    exp -> nativas
Rule 98    exp -> nativasArray
Rule 99    exp -> CADENA
Rule 100   exp -> CARACTER
Rule 101   exp -> ID
Rule 102   exp -> ID listaAccessoAr
Rule 103   exp -> CORCHETEA listaValores CORCHETEC
Rule 104   exp -> ID PARENTESISABIERTO listaValores PARENTESISCERRADO
Rule 105   exp -> ID PARENTESISABIERTO PARENTESISCERRADO
Rule 106   exp -> FALSE
Rule 107   exp -> TRUE

Terminals, with rules where they appear

AND                  : 90
BOOL                 : 62
BREAK                : 36
CADENA               : 99
CARACTER             : 100
CHAR                 : 63
COMA                 : 21 34 39 47 66 73 74
CONTINUE             : 37
CORCHETEA            : 33 103
CORCHETEC            : 33 103
COS                  : 68
DECIMAL              : 96
DIFERENTE            : 89
DIVISION             : 81
DSPUNTOS             : 16 25 25 27 27 43 43
ELSE                 : 51 52
ELSEIF               : 57
END                  : 16 17 45 46 51 52 53 54 58
ENTERO               : 95
FALSE                : 106
FLOAT                : 60
FLOAT_               : 75
FOR                  : 16 17
FUNCTION             : 45 46
GLOBAL               : 24
ID                   : 16 17 25 26 27 28 29 30 43 44 45 46 49 50 101 102 104 105
IF                   : 51 52 53 54
IGUAL                : 25 26 27 28 30
IGUALIGUAL           : 88
IN                   : 16 17
INT                  : 59
LENGTH               : 41
LOCAL                : 23
LOG                  : 66
LOG10                : 65
LOWERCASE            : 72
MAS                  : 78
MAYOR                : 84
MAYORIGUAL           : 86
MENOR                : 85
MENORIGUAL           : 87
MENOS                : 79 93
MODULO               : 83
MULTIPLICACION       : 80
NOT                  : 39 40 92
NULL                 : 
OR                   : 91
PARENTESISABIERTO    : 18 19 20 39 40 41 45 46 49 50 65 66 67 68 69 70 71 72 73 74 75 76 77 94 104 105
PARENTESISCERRADO    : 18 19 20 39 40 41 45 46 49 50 65 66 67 68 69 70 71 72 73 74 75 76 77 94 104 105
PARSE                : 73
POP                  : 40
POTENCIA             : 82
PRINT                : 18
PRINTLN              : 19 20
PTCOMA               : 2 16 17 18 19 20 25 26 27 28 29 30 35 36 37 38 45 46 49 50 51 52 53 54 58
PUSH                 : 39
RETURN               : 35
SIN                  : 67
SQRT                 : 70
STRING               : 61
STRING_              : 76
TAN                  : 69
TRUE                 : 107
TRUNC                : 74
TYPEOF               : 77
UPPERCASE            : 71
WHILE                : 58
error                : 2

Nonterminals, with rules where they appear

accesoArreglos       : 31 32
asignacion           : 8
conelseif            : 55 56
cuerpoFuncion        : 5 16 17 45 46 51 51 52 52 53 54 57 58
elseifs              : 51 53 55
entornoT             : 27 28 29
exp                  : 18 33 39 39 40 41 64 65 66 66 67 68 69 70 71 72 73 74 75 76 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 93 94
expresiones          : 16 16 17 21 22 25 26 27 28 30 35 47 48 51 52 53 54 57 58
expresionescomma     : 19 21
fors                 : 13
funcion              : 9
ifs                  : 11
impresion            : 7
initial              : 0
instruction          : 3 4 5 6
instructions         : 1 3
listaAccessoAr       : 30 31 102
listaParametros      : 34 45
listaValores         : 47 49 103 104
llamadaFunc          : 10
nativaArayPtC        : 15
nativas              : 97
nativasArray         : 38 98
parametros           : 34 42
tipos                : 25 27 43 73 74
traferencia          : 14
whiles               : 12

Parsing method: LALR

state 0

    (0) S' -> . initial
    (1) initial -> . instructions
    (3) instructions -> . instructions instruction
    (4) instructions -> . instruction
    (2) instruction -> . error PTCOMA
    (7) instruction -> . impresion
    (8) instruction -> . asignacion
    (9) instruction -> . funcion
    (10) instruction -> . llamadaFunc
    (11) instruction -> . ifs
    (12) instruction -> . whiles
    (13) instruction -> . fors
    (14) instruction -> . traferencia
    (15) instruction -> . nativaArayPtC
    (18) impresion -> . PRINT PARENTESISABIERTO exp PARENTESISCERRADO PTCOMA
    (19) impresion -> . PRINTLN PARENTESISABIERTO expresionescomma PARENTESISCERRADO PTCOMA
    (20) impresion -> . PRINTLN PARENTESISABIERTO PARENTESISCERRADO PTCOMA
    (25) asignacion -> . ID IGUAL expresiones DSPUNTOS DSPUNTOS tipos PTCOMA
    (26) asignacion -> . ID IGUAL expresiones PTCOMA
    (27) asignacion -> . entornoT ID IGUAL expresiones DSPUNTOS DSPUNTOS tipos PTCOMA
    (28) asignacion -> . entornoT ID IGUAL expresiones PTCOMA
    (29) asignacion -> . entornoT ID PTCOMA
    (30) asignacion -> . ID listaAccessoAr IGUAL expresiones PTCOMA
    (45) funcion -> . FUNCTION ID PARENTESISABIERTO listaParametros PARENTESISCERRADO cuerpoFuncion END PTCOMA
    (46) funcion -> . FUNCTION ID PARENTESISABIERTO PARENTESISCERRADO cuerpoFuncion END PTCOMA
    (49) llamadaFunc -> . ID PARENTESISABIERTO listaValores PARENTESISCERRADO PTCOMA
    (50) llamadaFunc -> . ID PARENTESISABIERTO PARENTESISCERRADO PTCOMA
    (51) ifs -> . IF expresiones cuerpoFuncion elseifs ELSE cuerpoFuncion END PTCOMA
    (52) ifs -> . IF expresiones cuerpoFuncion ELSE cuerpoFuncion END PTCOMA
    (53) ifs -> . IF expresiones cuerpoFuncion elseifs END PTCOMA
    (54) ifs -> . IF expresiones cuerpoFuncion END PTCOMA
    (58) whiles -> . WHILE expresiones cuerpoFuncion END PTCOMA
    (16) fors -> . FOR ID IN expresiones DSPUNTOS expresiones cuerpoFuncion END PTCOMA
    (17) fors -> . FOR ID IN expresiones cuerpoFuncion END PTCOMA
    (35) traferencia -> . RETURN expresiones PTCOMA
    (36) traferencia -> . BREAK PTCOMA
    (37) traferencia -> . CONTINUE PTCOMA
    (38) nativaArayPtC -> . nativasArray PTCOMA
    (23) entornoT -> . LOCAL
    (24) entornoT -> . GLOBAL
    (39) nativasArray -> . PUSH NOT PARENTESISABIERTO exp COMA exp PARENTESISCERRADO
    (40) nativasArray -> . POP NOT PARENTESISABIERTO exp PARENTESISCERRADO
    (41) nativasArray -> . LENGTH PARENTESISABIERTO exp PARENTESISCERRADO

    error           shift and go to state 4
    PRINT           shift and go to state 14
    PRINTLN         shift and go to state 15
    ID              shift and go to state 16
    FUNCTION        shift and go to state 18
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    LOCAL           shift and go to state 26
    GLOBAL          shift and go to state 27
    PUSH            shift and go to state 28
    POP             shift and go to state 29
    LENGTH          shift and go to state 30

    initial                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    impresion                      shift and go to state 5
    asignacion                     shift and go to state 6
    funcion                        shift and go to state 7
    llamadaFunc                    shift and go to state 8
    ifs                            shift and go to state 9
    whiles                         shift and go to state 10
    fors                           shift and go to state 11
    traferencia                    shift and go to state 12
    nativaArayPtC                  shift and go to state 13
    entornoT                       shift and go to state 17
    nativasArray                   shift and go to state 25

state 1

    (0) S' -> initial .



state 2

    (1) initial -> instructions .
    (3) instructions -> instructions . instruction
    (2) instruction -> . error PTCOMA
    (7) instruction -> . impresion
    (8) instruction -> . asignacion
    (9) instruction -> . funcion
    (10) instruction -> . llamadaFunc
    (11) instruction -> . ifs
    (12) instruction -> . whiles
    (13) instruction -> . fors
    (14) instruction -> . traferencia
    (15) instruction -> . nativaArayPtC
    (18) impresion -> . PRINT PARENTESISABIERTO exp PARENTESISCERRADO PTCOMA
    (19) impresion -> . PRINTLN PARENTESISABIERTO expresionescomma PARENTESISCERRADO PTCOMA
    (20) impresion -> . PRINTLN PARENTESISABIERTO PARENTESISCERRADO PTCOMA
    (25) asignacion -> . ID IGUAL expresiones DSPUNTOS DSPUNTOS tipos PTCOMA
    (26) asignacion -> . ID IGUAL expresiones PTCOMA
    (27) asignacion -> . entornoT ID IGUAL expresiones DSPUNTOS DSPUNTOS tipos PTCOMA
    (28) asignacion -> . entornoT ID IGUAL expresiones PTCOMA
    (29) asignacion -> . entornoT ID PTCOMA
    (30) asignacion -> . ID listaAccessoAr IGUAL expresiones PTCOMA
    (45) funcion -> . FUNCTION ID PARENTESISABIERTO listaParametros PARENTESISCERRADO cuerpoFuncion END PTCOMA
    (46) funcion -> . FUNCTION ID PARENTESISABIERTO PARENTESISCERRADO cuerpoFuncion END PTCOMA
    (49) llamadaFunc -> . ID PARENTESISABIERTO listaValores PARENTESISCERRADO PTCOMA
    (50) llamadaFunc -> . ID PARENTESISABIERTO PARENTESISCERRADO PTCOMA
    (51) ifs -> . IF expresiones cuerpoFuncion elseifs ELSE cuerpoFuncion END PTCOMA
    (52) ifs -> . IF expresiones cuerpoFuncion ELSE cuerpoFuncion END PTCOMA
    (53) ifs -> . IF expresiones cuerpoFuncion elseifs END PTCOMA
    (54) ifs -> . IF expresiones cuerpoFuncion END PTCOMA
    (58) whiles -> . WHILE expresiones cuerpoFuncion END PTCOMA
    (16) fors -> . FOR ID IN expresiones DSPUNTOS expresiones cuerpoFuncion END PTCOMA
    (17) fors -> . FOR ID IN expresiones cuerpoFuncion END PTCOMA
    (35) traferencia -> . RETURN expresiones PTCOMA
    (36) traferencia -> . BREAK PTCOMA
    (37) traferencia -> . CONTINUE PTCOMA
    (38) nativaArayPtC -> . nativasArray PTCOMA
    (23) entornoT -> . LOCAL
    (24) entornoT -> . GLOBAL
    (39) nativasArray -> . PUSH NOT PARENTESISABIERTO exp COMA exp PARENTESISCERRADO
    (40) nativasArray -> . POP NOT PARENTESISABIERTO exp PARENTESISCERRADO
    (41) nativasArray -> . LENGTH PARENTESISABIERTO exp PARENTESISCERRADO

    $end            reduce using rule 1 (initial -> instructions .)
    error           shift and go to state 4
    PRINT           shift and go to state 14
    PRINTLN         shift and go to state 15
    ID              shift and go to state 16
    FUNCTION        shift and go to state 18
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    LOCAL           shift and go to state 26
    GLOBAL          shift and go to state 27
    PUSH            shift and go to state 28
    POP             shift and go to state 29
    LENGTH          shift and go to state 30

    instruction                    shift and go to state 31
    impresion                      shift and go to state 5
    asignacion                     shift and go to state 6
    funcion                        shift and go to state 7
    llamadaFunc                    shift and go to state 8
    ifs                            shift and go to state 9
    whiles                         shift and go to state 10
    fors                           shift and go to state 11
    traferencia                    shift and go to state 12
    nativaArayPtC                  shift and go to state 13
    entornoT                       shift and go to state 17
    nativasArray                   shift and go to state 25

state 3

    (4) instructions -> instruction .

    error           reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    PRINTLN         reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    FUNCTION        reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    LOCAL           reduce using rule 4 (instructions -> instruction .)
    GLOBAL          reduce using rule 4 (instructions -> instruction .)
    PUSH            reduce using rule 4 (instructions -> instruction .)
    POP             reduce using rule 4 (instructions -> instruction .)
    LENGTH          reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)


state 4

    (2) instruction -> error . PTCOMA

    PTCOMA          shift and go to state 32


state 5

    (7) instruction -> impresion .

    error           reduce using rule 7 (instruction -> impresion .)
    PRINT           reduce using rule 7 (instruction -> impresion .)
    PRINTLN         reduce using rule 7 (instruction -> impresion .)
    ID              reduce using rule 7 (instruction -> impresion .)
    FUNCTION        reduce using rule 7 (instruction -> impresion .)
    IF              reduce using rule 7 (instruction -> impresion .)
    WHILE           reduce using rule 7 (instruction -> impresion .)
    FOR             reduce using rule 7 (instruction -> impresion .)
    RETURN          reduce using rule 7 (instruction -> impresion .)
    BREAK           reduce using rule 7 (instruction -> impresion .)
    CONTINUE        reduce using rule 7 (instruction -> impresion .)
    LOCAL           reduce using rule 7 (instruction -> impresion .)
    GLOBAL          reduce using rule 7 (instruction -> impresion .)
    PUSH            reduce using rule 7 (instruction -> impresion .)
    POP             reduce using rule 7 (instruction -> impresion .)
    LENGTH          reduce using rule 7 (instruction -> impresion .)
    $end            reduce using rule 7 (instruction -> impresion .)
    ELSE            reduce using rule 7 (instruction -> impresion .)
    END             reduce using rule 7 (instruction -> impresion .)
    ELSEIF          reduce using rule 7 (instruction -> impresion .)


state 6

    (8) instruction -> asignacion .

    error           reduce using rule 8 (instruction -> asignacion .)
    PRINT           reduce using rule 8 (instruction -> asignacion .)
    PRINTLN         reduce using rule 8 (instruction -> asignacion .)
    ID              reduce using rule 8 (instruction -> asignacion .)
    FUNCTION        reduce using rule 8 (instruction -> asignacion .)
    IF              reduce using rule 8 (instruction -> asignacion .)
    WHILE           reduce using rule 8 (instruction -> asignacion .)
    FOR             reduce using rule 8 (instruction -> asignacion .)
    RETURN          reduce using rule 8 (instruction -> asignacion .)
    BREAK           reduce using rule 8 (instruction -> asignacion .)
    CONTINUE        reduce using rule 8 (instruction -> asignacion .)
    LOCAL           reduce using rule 8 (instruction -> asignacion .)
    GLOBAL          reduce using rule 8 (instruction -> asignacion .)
    PUSH            reduce using rule 8 (instruction -> asignacion .)
    POP             reduce using rule 8 (instruction -> asignacion .)
    LENGTH          reduce using rule 8 (instruction -> asignacion .)
    $end            reduce using rule 8 (instruction -> asignacion .)
    ELSE            reduce using rule 8 (instruction -> asignacion .)
    END             reduce using rule 8 (instruction -> asignacion .)
    ELSEIF          reduce using rule 8 (instruction -> asignacion .)


state 7

    (9) instruction -> funcion .

    error           reduce using rule 9 (instruction -> funcion .)
    PRINT           reduce using rule 9 (instruction -> funcion .)
    PRINTLN         reduce using rule 9 (instruction -> funcion .)
    ID              reduce using rule 9 (instruction -> funcion .)
    FUNCTION        reduce using rule 9 (instruction -> funcion .)
    IF              reduce using rule 9 (instruction -> funcion .)
    WHILE           reduce using rule 9 (instruction -> funcion .)
    FOR             reduce using rule 9 (instruction -> funcion .)
    RETURN          reduce using rule 9 (instruction -> funcion .)
    BREAK           reduce using rule 9 (instruction -> funcion .)
    CONTINUE        reduce using rule 9 (instruction -> funcion .)
    LOCAL           reduce using rule 9 (instruction -> funcion .)
    GLOBAL          reduce using rule 9 (instruction -> funcion .)
    PUSH            reduce using rule 9 (instruction -> funcion .)
    POP             reduce using rule 9 (instruction -> funcion .)
    LENGTH          reduce using rule 9 (instruction -> funcion .)
    $end            reduce using rule 9 (instruction -> funcion .)
    ELSE            reduce using rule 9 (instruction -> funcion .)
    END             reduce using rule 9 (instruction -> funcion .)
    ELSEIF          reduce using rule 9 (instruction -> funcion .)


state 8

    (10) instruction -> llamadaFunc .

    error           reduce using rule 10 (instruction -> llamadaFunc .)
    PRINT           reduce using rule 10 (instruction -> llamadaFunc .)
    PRINTLN         reduce using rule 10 (instruction -> llamadaFunc .)
    ID              reduce using rule 10 (instruction -> llamadaFunc .)
    FUNCTION        reduce using rule 10 (instruction -> llamadaFunc .)
    IF              reduce using rule 10 (instruction -> llamadaFunc .)
    WHILE           reduce using rule 10 (instruction -> llamadaFunc .)
    FOR             reduce using rule 10 (instruction -> llamadaFunc .)
    RETURN          reduce using rule 10 (instruction -> llamadaFunc .)
    BREAK           reduce using rule 10 (instruction -> llamadaFunc .)
    CONTINUE        reduce using rule 10 (instruction -> llamadaFunc .)
    LOCAL           reduce using rule 10 (instruction -> llamadaFunc .)
    GLOBAL          reduce using rule 10 (instruction -> llamadaFunc .)
    PUSH            reduce using rule 10 (instruction -> llamadaFunc .)
    POP             reduce using rule 10 (instruction -> llamadaFunc .)
    LENGTH          reduce using rule 10 (instruction -> llamadaFunc .)
    $end            reduce using rule 10 (instruction -> llamadaFunc .)
    ELSE            reduce using rule 10 (instruction -> llamadaFunc .)
    END             reduce using rule 10 (instruction -> llamadaFunc .)
    ELSEIF          reduce using rule 10 (instruction -> llamadaFunc .)


state 9

    (11) instruction -> ifs .

    error           reduce using rule 11 (instruction -> ifs .)
    PRINT           reduce using rule 11 (instruction -> ifs .)
    PRINTLN         reduce using rule 11 (instruction -> ifs .)
    ID              reduce using rule 11 (instruction -> ifs .)
    FUNCTION        reduce using rule 11 (instruction -> ifs .)
    IF              reduce using rule 11 (instruction -> ifs .)
    WHILE           reduce using rule 11 (instruction -> ifs .)
    FOR             reduce using rule 11 (instruction -> ifs .)
    RETURN          reduce using rule 11 (instruction -> ifs .)
    BREAK           reduce using rule 11 (instruction -> ifs .)
    CONTINUE        reduce using rule 11 (instruction -> ifs .)
    LOCAL           reduce using rule 11 (instruction -> ifs .)
    GLOBAL          reduce using rule 11 (instruction -> ifs .)
    PUSH            reduce using rule 11 (instruction -> ifs .)
    POP             reduce using rule 11 (instruction -> ifs .)
    LENGTH          reduce using rule 11 (instruction -> ifs .)
    $end            reduce using rule 11 (instruction -> ifs .)
    ELSE            reduce using rule 11 (instruction -> ifs .)
    END             reduce using rule 11 (instruction -> ifs .)
    ELSEIF          reduce using rule 11 (instruction -> ifs .)


state 10

    (12) instruction -> whiles .

    error           reduce using rule 12 (instruction -> whiles .)
    PRINT           reduce using rule 12 (instruction -> whiles .)
    PRINTLN         reduce using rule 12 (instruction -> whiles .)
    ID              reduce using rule 12 (instruction -> whiles .)
    FUNCTION        reduce using rule 12 (instruction -> whiles .)
    IF              reduce using rule 12 (instruction -> whiles .)
    WHILE           reduce using rule 12 (instruction -> whiles .)
    FOR             reduce using rule 12 (instruction -> whiles .)
    RETURN          reduce using rule 12 (instruction -> whiles .)
    BREAK           reduce using rule 12 (instruction -> whiles .)
    CONTINUE        reduce using rule 12 (instruction -> whiles .)
    LOCAL           reduce using rule 12 (instruction -> whiles .)
    GLOBAL          reduce using rule 12 (instruction -> whiles .)
    PUSH            reduce using rule 12 (instruction -> whiles .)
    POP             reduce using rule 12 (instruction -> whiles .)
    LENGTH          reduce using rule 12 (instruction -> whiles .)
    $end            reduce using rule 12 (instruction -> whiles .)
    ELSE            reduce using rule 12 (instruction -> whiles .)
    END             reduce using rule 12 (instruction -> whiles .)
    ELSEIF          reduce using rule 12 (instruction -> whiles .)


state 11

    (13) instruction -> fors .

    error           reduce using rule 13 (instruction -> fors .)
    PRINT           reduce using rule 13 (instruction -> fors .)
    PRINTLN         reduce using rule 13 (instruction -> fors .)
    ID              reduce using rule 13 (instruction -> fors .)
    FUNCTION        reduce using rule 13 (instruction -> fors .)
    IF              reduce using rule 13 (instruction -> fors .)
    WHILE           reduce using rule 13 (instruction -> fors .)
    FOR             reduce using rule 13 (instruction -> fors .)
    RETURN          reduce using rule 13 (instruction -> fors .)
    BREAK           reduce using rule 13 (instruction -> fors .)
    CONTINUE        reduce using rule 13 (instruction -> fors .)
    LOCAL           reduce using rule 13 (instruction -> fors .)
    GLOBAL          reduce using rule 13 (instruction -> fors .)
    PUSH            reduce using rule 13 (instruction -> fors .)
    POP             reduce using rule 13 (instruction -> fors .)
    LENGTH          reduce using rule 13 (instruction -> fors .)
    $end            reduce using rule 13 (instruction -> fors .)
    ELSE            reduce using rule 13 (instruction -> fors .)
    END             reduce using rule 13 (instruction -> fors .)
    ELSEIF          reduce using rule 13 (instruction -> fors .)


state 12

    (14) instruction -> traferencia .

    error           reduce using rule 14 (instruction -> traferencia .)
    PRINT           reduce using rule 14 (instruction -> traferencia .)
    PRINTLN         reduce using rule 14 (instruction -> traferencia .)
    ID              reduce using rule 14 (instruction -> traferencia .)
    FUNCTION        reduce using rule 14 (instruction -> traferencia .)
    IF              reduce using rule 14 (instruction -> traferencia .)
    WHILE           reduce using rule 14 (instruction -> traferencia .)
    FOR             reduce using rule 14 (instruction -> traferencia .)
    RETURN          reduce using rule 14 (instruction -> traferencia .)
    BREAK           reduce using rule 14 (instruction -> traferencia .)
    CONTINUE        reduce using rule 14 (instruction -> traferencia .)
    LOCAL           reduce using rule 14 (instruction -> traferencia .)
    GLOBAL          reduce using rule 14 (instruction -> traferencia .)
    PUSH            reduce using rule 14 (instruction -> traferencia .)
    POP             reduce using rule 14 (instruction -> traferencia .)
    LENGTH          reduce using rule 14 (instruction -> traferencia .)
    $end            reduce using rule 14 (instruction -> traferencia .)
    ELSE            reduce using rule 14 (instruction -> traferencia .)
    END             reduce using rule 14 (instruction -> traferencia .)
    ELSEIF          reduce using rule 14 (instruction -> traferencia .)


state 13

    (15) instruction -> nativaArayPtC .

    error           reduce using rule 15 (instruction -> nativaArayPtC .)
    PRINT           reduce using rule 15 (instruction -> nativaArayPtC .)
    PRINTLN         reduce using rule 15 (instruction -> nativaArayPtC .)
    ID              reduce using rule 15 (instruction -> nativaArayPtC .)
    FUNCTION        reduce using rule 15 (instruction -> nativaArayPtC .)
    IF              reduce using rule 15 (instruction -> nativaArayPtC .)
    WHILE           reduce using rule 15 (instruction -> nativaArayPtC .)
    FOR             reduce using rule 15 (instruction -> nativaArayPtC .)
    RETURN          reduce using rule 15 (instruction -> nativaArayPtC .)
    BREAK           reduce using rule 15 (instruction -> nativaArayPtC .)
    CONTINUE        reduce using rule 15 (instruction -> nativaArayPtC .)
    LOCAL           reduce using rule 15 (instruction -> nativaArayPtC .)
    GLOBAL          reduce using rule 15 (instruction -> nativaArayPtC .)
    PUSH            reduce using rule 15 (instruction -> nativaArayPtC .)
    POP             reduce using rule 15 (instruction -> nativaArayPtC .)
    LENGTH          reduce using rule 15 (instruction -> nativaArayPtC .)
    $end            reduce using rule 15 (instruction -> nativaArayPtC .)
    ELSE            reduce using rule 15 (instruction -> nativaArayPtC .)
    END             reduce using rule 15 (instruction -> nativaArayPtC .)
    ELSEIF          reduce using rule 15 (instruction -> nativaArayPtC .)


state 14

    (18) impresion -> PRINT . PARENTESISABIERTO exp PARENTESISCERRADO PTCOMA

    PARENTESISABIERTO shift and go to state 33


state 15

    (19) impresion -> PRINTLN . PARENTESISABIERTO expresionescomma PARENTESISCERRADO PTCOMA
    (20) impresion -> PRINTLN . PARENTESISABIERTO PARENTESISCERRADO PTCOMA

    PARENTESISABIERTO shift and go to state 34


state 16

    (25) asignacion -> ID . IGUAL expresiones DSPUNTOS DSPUNTOS tipos PTCOMA
    (26) asignacion -> ID . IGUAL expresiones PTCOMA
    (30) asignacion -> ID . listaAccessoAr IGUAL expresiones PTCOMA
    (49) llamadaFunc -> ID . PARENTESISABIERTO listaValores PARENTESISCERRADO PTCOMA
    (50) llamadaFunc -> ID . PARENTESISABIERTO PARENTESISCERRADO PTCOMA
    (31) listaAccessoAr -> . listaAccessoAr accesoArreglos
    (32) listaAccessoAr -> . accesoArreglos
    (33) accesoArreglos -> . CORCHETEA exp CORCHETEC

    IGUAL           shift and go to state 35
    PARENTESISABIERTO shift and go to state 37
    CORCHETEA       shift and go to state 39

    listaAccessoAr                 shift and go to state 36
    accesoArreglos                 shift and go to state 38

state 17

    (27) asignacion -> entornoT . ID IGUAL expresiones DSPUNTOS DSPUNTOS tipos PTCOMA
    (28) asignacion -> entornoT . ID IGUAL expresiones PTCOMA
    (29) asignacion -> entornoT . ID PTCOMA

    ID              shift and go to state 40


state 18
